--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.android.support:preference-v7:26.1.0'
     compile "com.android.support:recyclerview-v7:26.1.0"
     compile 'com.squareup.okhttp3:okhttp:3.10.0'
+    compile 'com.google.android.exoplayer:exoplayer:2.6.1'
 }
