upload image via rest parcialmente

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,10 @@ dependencies {
     compile 'com.android.support:preference-v7:26.1.0'
     compile 'com.android.support:recyclerview-v7:26.1.0'
 
-    compile 'com.squareup.okhttp3:okhttp:3.10.0'
     compile 'com.google.android.exoplayer:exoplayer:2.6.1'
     compile 'org.apmem.tools:layouts:1.10@aar'
+
+    // Retrofit & OkHttp
+    compile 'com.squareup.retrofit2:retrofit:2.4.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
 }
