--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,12 +35,12 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.android.support:cardview-v7:26.1.0'
 
-    compile 'com.google.android.exoplayer:exoplayer:2.6.1'
-    compile 'org.apmem.tools:layouts:1.10@aar'
+    implementation 'com.google.android.exoplayer:exoplayer:2.6.1'
+    implementation 'org.apmem.tools:layouts:1.10@aar'
 
     // Retrofit & OkHttp
-    compile 'com.squareup.retrofit2:retrofit:2.4.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
