--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,5 +73,9 @@ dependencies {
     implementation 'com.facebook.stetho:stetho:1.5.0'
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
 
+    //Extreme RoundCorners in Cardviews
     compile 'com.github.captain-miao:optroundcardview:1.0.0'
+
+    //Testing-only dependencies
+
 }
